feat: added backend packages

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "node-json-db": "^2.3.0",
     "nodemon": "^3.1.0"
   }
 }
