--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "node-json-db": "^2.3.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "twilio": "^5.0.4"
   }
 }
