--- a/frontend/barks-and-bubbles-frontend/package.json
+++ b/frontend/barks-and-bubbles-frontend/package.json
@@ -25,9 +25,9 @@
     "@angular/ssr": "^17.3.6",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "lottie-player": "^1.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "xlsx": "^0.18.5",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
