--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.4.0",
     "node-json-db": "^2.3.0",
     "nodemon": "^3.1.0",
     "twilio": "^5.0.4"
