feat: install packages for auth

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mongoose": "^8.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.3",
     "node-json-db": "^2.3.0",
     "nodemon": "^3.1.0",
     "twilio": "^5.0.4"
