--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "node-json-db": "^2.3.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.0",
     "twilio": "^5.0.4"
   }
