--- a/frontend/barks-and-bubbles-frontend/tsconfig.json
+++ b/frontend/barks-and-bubbles-frontend/tsconfig.json
@@ -21,7 +21,9 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "types": ["node"],
+    "typeRoots": ["node_modules/@types"],
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
