--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,24 +1,14 @@
 {
   "version": "0.2.0",
   "configurations": [
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Launch Program",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
-      "program": "${workspaceFolder}\\backend\\controllers\\message.controller.js",
-      "outFiles": [
-        "${workspaceFolder}/**/*.js"
-      ]
-    },
+    
+    
     {
       "type": "node-terminal",
-      "name": "Run Script: start",
+      "name": "Backend Debugger",
       "request": "launch",
       "command": "npm run start",
-      "cwd": "${workspaceFolder}\\backend"
+      "cwd": "${workspaceFolder}/backend"
     }
   ]
 }
