--- a/frontend/barks-and-bubbles-frontend/angular.json
+++ b/frontend/barks-and-bubbles-frontend/angular.json
@@ -41,11 +41,15 @@
           },
           "configurations": {
             "production": {
+              "optimization": true,
+              "sourceMap": false,
+              "namedChunks": false,
+              "extractLicenses": true,
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "5mb"
+                  "maximumWarning": "1000kb",
+                  "maximumError": "10mb"
                 },
                 {
                   "type": "anyComponentStyle",
